Changed Eq 2.50 from z''/a to z''/z on Pg 27.

--- a/mainintro.tex
+++ b/mainintro.tex
@@ -780,7 +780,7 @@ The mode function $w(\kvi)$ obeys the same equation of motion as $u(\kvi)$:
 % 
 \begin{equation}
 \label{eq:weqn-intro}
- w''(\kvi) + \left[ k^2 -\frac{z''}{a}\right]w(\kvi) = 0\,.
+ w''(\kvi) + \left[ k^2 -\frac{z''}{z}\right]w(\kvi) = 0\,.
 \end{equation}
 % 
 The operators $\hat{a}^\dagger$ and $\hat{a}$ are the usual creation and
