Changed from \wt{\kb} to \kb_1 and 2 in eq 2.60, 2.62 on Pg 29.

--- a/mainintro.tex
+++ b/mainintro.tex
@@ -874,9 +874,9 @@ The power spectrum of the inflaton perturbation $\dvp1 = u/a$ can now be
 defined as
 % 
 \begin{equation}
-  \langle \dvp1(\textbf{k}) \dvp1(\wt{\textbf{k}}) \rangle 
-   \equiv (2\pi)^3 \delta(\textbf{k} + \wt{\textbf{k}}) P_{\dvp{}}^2 (k)
-   = (2\pi)^3 \delta(\textbf{k} + \wt{\textbf{k}}) \frac{|w(\kb)|^2}{a^2}\,,
+  \langle \dvp1(\textbf{k}_1) \dvp1(\textbf{k}_2) \rangle 
+   \equiv (2\pi)^3 \delta(\textbf{k}_1 + \textbf{k}_2) P_{\dvp{}}^2 (k_1)
+   = (2\pi)^3 \delta(\textbf{k}_1 + \textbf{k}_2) \frac{|w(\kb_1)|^2}{a^2}\,,
 \end{equation}
 % 
 where $\langle \ldots \rangle$ denotes the ensemble average. 
@@ -900,8 +900,8 @@ perturbation $\R = H\dvp1/\dot{\vp}_0$:
 % 
 \begin{equation}
  \label{eq:Prdefn-intro}
- \langle \R(\textbf{k}) \R(\wt{\textbf{k}}) \rangle 
-   = (2\pi)^3 \delta(\textbf{k} + \wt{\textbf{k}}) P_\R^2 (k)\,,
+ \langle \R(\textbf{k}_1) \R(\textbf{k}_2) \rangle 
+   = (2\pi)^3 \delta(\textbf{k}_1 + \textbf{k}_2) P_\R^2 (k_1)\,,
 \end{equation}
 %
 and the dimensionless power spectrum
