--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -182,7 +182,7 @@ r_*  < \frac{32}{N (\Neff)^2} \,.
 The effective number of e-foldings, $\Neff$, defined in
 \eq{eq:Neff-dbiintro}, 
 is a model-dependent parameter that quantifies 
-how $r$ varies during the final stages of inflation. Since $c_s\PX = 1$ in the
+how $r$ varies during the final stages of inflation. Since $\cs\PX = 1$ in the
 standard DBI model, 
 it follows that $\Neff = \N_\mathrm{end}$ if $r$ is constant during inflation,
 where $\N_\mathrm{end}$ is the total number of e-foldings
@@ -590,7 +590,7 @@ generating a successful phase of inflation.}.
 A direct comparison with \eq{eq:Pdefn-dbiintro} 
 indicates that the standard DBI action exhibits two important properties. 
 The first is the condition that $f_1 f_2 =2$. This implies that 
-$c_sP_{,X} =1$ and greatly simplifies the form of \eq{eq:rtheory}. 
+$\cs P_{,X} =1$ and greatly simplifies the form of \eq{eq:rtheory}. 
 The second property is that the warp factor uniquely determines 
 the kinetic structure of the action, i.e., $h^4 \propto f_1 \propto f_2^{-1}$.  
 In view of this, it is interesting to consider whether
@@ -612,7 +612,7 @@ the inflaton, defined in \eq{eq:defcs-dbiintro} is given by
 %  
 \begin{equation}
 \label{eq:cs-dbi}
-c_s = \sqrt{1-f_2 X} = \frac{f_1f_2}{2} \frac{1}{P_{,X}}  \,,
+\cs = \sqrt{1-f_2 X} = \frac{f_1f_2}{2} \frac{1}{P_{,X}}  \,,
 \end{equation}
 % 
 and the scalar power spectrum \eqref{eq:Ps-dbiintro} by
@@ -667,13 +667,13 @@ In Section~\ref{sec:lyth-dbiintro} the Lyth bound was defined for general
 non-canonical actions. 
 If we restrict our attention to 
 the observable stage of inflation, and further assume that the variation
-of $f_1f_2 = 2 c_s\PX$ is negligible during that epoch, we can use
+of $f_1f_2 = 2 \cs\PX$ is negligible during that epoch, we can use
 \eq{eq:approxlyth-dbiintro} to deduce that 
 % 
 \begin{equation}
 \label{eq:genphivary1}
 \left( \frac{\Delta \varphi}{\Mpl} \right)^2_{*} \simeq 
-\frac{(\Delta \N_{*} )^2}{8} \left(\frac{r}{c_s\PX}\right)_*  \,.
+\frac{(\Delta \N_{*} )^2}{8} \left(\frac{r}{\cs\PX}\right)_*  \,.
 \end{equation}
 % 
 On the other hand, the BM bound restricts the maximal 
@@ -697,7 +697,7 @@ may be as large as 60. Thus, the generalised bound
 % 
 \begin{equation}
 \label{eq:genBMbound}
-r_*< \frac{32}{N (\Delta \N_{*})^2} (c_s\PX)_* = \frac{16}{N (\Delta \N_{*})^2}
+r_*< \frac{32}{N (\Delta \N_{*})^2} (\cs\PX)_* = \frac{16}{N (\Delta \N_{*})^2}
 (f_1f_2)_* \,.
 \end{equation}
 % 
@@ -773,7 +773,7 @@ that
 \begin{equation}
 \label{eq:LHbound}
 r_* < \frac{10}{(\Delta \N)_*^2} \left( \frac{T_3}{\Vol} \right)^{1/3} 
-\left( \frac{h_*}{\Mpl} \right)^{4/3} \left( c_s P_{,X} \right)_* \,.
+\left( \frac{h_*}{\Mpl} \right)^{4/3} \left( \cs P_{,X} \right)_* \,.
 \end{equation}
 % 
 This bound is valid for any $P(X,\vp)$ in the warped throat including the
@@ -813,7 +813,7 @@ h_*^{4/3} N < 300 \frac{(\Delta \N)^2_*}{\Neff^2} \,.
 To summarise this section, 
 expressions \eqref{eq:genBMbound} and \eqref{eq:LHbound} imply that the 
 bounds described in Section~\ref{sec:upper-dbi}
-could be relaxed if $2c_s\PX = f_1f_2 \gg 1$ on observable scales. 
+could be relaxed if $2\cs\PX = f_1f_2 \gg 1$ on observable scales. 
 It is therefore important to develop string-inspired models 
 where this condition arises naturally. We will explore this possibility in the
 next chapter.
@@ -882,7 +882,7 @@ next chapter.
 % \begin{equation}
 % \label{eq:BMbound-multi}
 % r_* < \frac{32}{N \Neff^2} \left( 
-% c_s P_{,X} \right)_* \,.
+% \cs P_{,X} \right)_* \,.
 % \end{equation}
 % % 
 
