--- a/dbi/multibrane.tex
+++ b/dbi/multibrane.tex
@@ -114,21 +114,21 @@ in the sense that the kinetic function satisfies the constraints
 % 
 \begin{equation}
 \label{eq:cspx1}
-c_s P_{,X} = 1 , \qquad  \Lambda = \frac{1}{2} \left( 
-\frac{1}{c_s^2} -1 \right) \,.
+\cs P_{,X} = 1 , \qquad  \Lambda = \frac{1}{2} \left( 
+\frac{1}{\cs^2} -1 \right) \,.
 \end{equation}
 % 
 We saw in Section~\ref{sec:relaxing-dbi} that the 
 bounds \eqref{eq:genBMbound} and \eqref{eq:LHbound} 
 on the tensor-scalar ratio could in principle be 
-significantly relaxed in models where $(c_sP_{,X})_* \gg 1$. 
+significantly relaxed in models where $(\cs P_{,X})_* \gg 1$. 
 In view of the second relation in \eq{eq:cspx1}, it is of interest 
 to begin by taking a phenomenological approach and to consider the more  
 general class of models that satisfy the relation
 %  
 \begin{equation}
 \label{eq:defalpha}
-\frac{1}{c_s^2} -1 = \alpha \Lambda \,,
+\frac{1}{\cs^2} -1 = \alpha \Lambda \,,
 \end{equation}
 % 
 for some positive constant $\alpha$. 
@@ -148,13 +148,13 @@ By substituting \eq{eq:defalpha} into the definition of $\fnleq$ in
 \eq{eq:fnldefn-dbiintro}, we can see that for this case
 % 
 \begin{equation}
- \fnleq \propto \frac{1}{c_s^2} \propto \Lambda\,.
+ \fnleq \propto \frac{1}{\cs^2} \propto \Lambda\,.
 \end{equation}
 % 
-Recall that the definitions of $c_s^2$ and $\Lambda$ in \eqs{eq:defcs-dbiintro} and
+Recall that the definitions of $\cs^2$ and $\Lambda$ in \eqs{eq:defcs-dbiintro} and
 \eqref{eq:deflambda-dbiintro} are in terms of $P$ and its derivatives with respect
 to $X$. We can require that the magnitude of $\fnleq$ is large by considering
-scenarios in the limit where $c_s^2$ is small and $\Lambda$ is large, or
+scenarios in the limit where $\cs^2$ is small and $\Lambda$ is large, or
 equivalently:
 % To proceed, therefore, we consider 
 % scenarios that satisfy this condition in the limit where 
@@ -219,7 +219,7 @@ analytically without this approximation.
 generality without imposing the limits (\ref{eq:Plimits}) on the 
 derivatives of the kinetic function. This allows us to determine the 
 most general class of models where the non-linearity parameter 
-satisfies the condition $\fnleq \propto 1/c_s^2$ at leading order. 
+satisfies the condition $\fnleq \propto 1/\cs^2$ at leading order. 
 
 In general \eq{eq:defalpha} takes the form 
 % 
@@ -312,10 +312,10 @@ More generally, however, \eq{eq:gensoln-multi} implies that
 % 
 \begin{align}
 \label{eq:consequence-multi}
-c_sP_{,X} &\simeq \frac{l f_1 f_2}{\sqrt{2(1-l)}} \left( 
+\cs P_{,X} &\simeq \frac{l f_1 f_2}{\sqrt{2(1-l)}} \left( 
 1- f_2X \right)^{(2l-1)/2} \,,
 \\
-c_s^2 &\simeq \frac{1-f_2X}{2(1-l)} \,,
+\cs^2 &\simeq \frac{1-f_2X}{2(1-l)} \,,
 \end{align}
 % 
 when $X \simeq 1/f_2$. Self-consistency therefore
@@ -328,7 +328,7 @@ we find from \eq{eq:fnldefn-dbiintro} that
 \,,
 \\
 \label{eq:consequence4-multi}
-\fnleq &\simeq -\frac{\sigma}{c_s^2}\,, & \sigma &\equiv 
+\fnleq &\simeq -\frac{\sigma}{\cs^2}\,, & \sigma &\equiv 
 \frac{5}{972} \left( \frac{59-55l}{1-l} \right) \,.
 \end{align}
 % 
@@ -1072,12 +1072,12 @@ f_2 (\varphi) = \frac{2}{T_3 h^4} \,.
 % 
 We may, therefore, immediately conclude from \eq{eq:consequence4-multi} that
 $\fnleq
-\simeq -0.3/c_s^2$. Moreover, since $\beta \simeq 0.9$ in this scenario, 
+\simeq -0.3/\cs^2$. Moreover, since $\beta \simeq 0.9$ in this scenario, 
 Eqs.~\eqref{eq:consequence-multi} and \eqref{eq:consequence3-multi} reduce to  
 % 
 \begin{equation}
 \label{eq:csPXlimit}
-c_sP_{,X} \simeq -1.3 \sqrt{1+(n-1)^2Y} \fnleq \,.
+\cs P_{,X} \simeq -1.3 \sqrt{1+(n-1)^2Y} \fnleq \,.
 \end{equation}
 % 
 
