--- a/ihmacros.sty
+++ b/ihmacros.sty
@@ -153,5 +153,12 @@
 %
 \newcommand{\bea}{\begin{eqnarray}}
 \newcommand{\eea}{\end{eqnarray}}
-%
+% % % % % % % % % % % % % % % % % % % %
+
+% % % % % % % % % % % % % % % % % % % % % % 
+% Definitions for c_s, m_s roman fonts
+% % % % % % % % % % % % % % % % % % % % % % 
+\newcommand{\cs}{\ensuremath{c_\mathrm{s}}}
+\newcommand{\ms}{\ensuremath{m_\mathrm{s}}}
+\newcommand{\gs}{\ensuremath{g_\mathrm{s}}}
 
