Changed from m_s to \ms and g_s to \gs throughout to use roman font.

--- a/dbi/dbi-intro.tex
+++ b/dbi/dbi-intro.tex
@@ -301,7 +301,7 @@ and the new tower of winding states:
  M^2 = \frac{j^2}{L^2} + \frac{w^2 L^2}{\alpha'^2} + \cdots\,,
 \end{equation}
 where the string parameter $\alpha'$ is related to the string mass scale by
-$\alpha'=1/m_s^2$.
+$\alpha'=1/\ms^2$.
 If $L$ is taken to infinity, the $w\ne 0$ states become infinitely massive and
 only the $w=0$ state is left with a continuum of momentum values. Thus, the
 uncompactified result is recovered. However, if $L\rightarrow0$, the $j\ne 0$
@@ -370,10 +370,10 @@ tension given by \cite{Johnson2000}\footnote{$T_p$ here is $\tau_p$ in
 % 
 \begin{equation}
 \label{eq:branetensiondefn-dbiintro}
- T_p = \frac{m_s^{p+1}}{(2\pi)^p g_s}\,,
+ T_p = \frac{\ms^{p+1}}{(2\pi)^p \gs}\,,
 \end{equation}
 % 
-where $g_s$ is the string coupling and $m_s$ is the string mass scale.
+where $\gs$ is the string coupling and $\ms$ is the string mass scale.
 Their dynamics is governed by the action 
 % 
 \begin{equation}
@@ -454,7 +454,7 @@ warp factor is given by $h=\rho /L$ and
 the radius of curvature of the $AdS_5$ space is defined by
 %  
 \begin{equation}
-L^4 \equiv \frac{4\pi^4 g_s N}{{\rm Vol} (X_5) m_s^4} \,,
+L^4 \equiv \frac{4\pi^4 \gs N}{{\rm Vol} (X_5) \ms^4} \,,
 \end{equation}
 % 
 such that $\mathrm{Vol}(X_5)$ is the dimensionless volume of 
