--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -106,7 +106,7 @@ derived a field-theoretic upper bound on the tensor-scalar ratio. They achieved
 this by noting that the four-dimensional Planck mass is related 
 to the volume of the compactified CY manifold, $V_6$, such that 
 $\Mpl^2=V_6 \kappa_{10}^{-2}$, where $\kappa_{10}^2 \equiv 
-\frac{1}{2} (2\pi )^7 g_s^2 m_s^{-8} = \pi /T_3^{2}$ for a 
+\frac{1}{2} (2\pi )^7 \gs^2 \ms^{-8} = \pi /T_3^{2}$ for a 
 ${\rm D3}$-brane\footnote{We parametrise the Planck scale 
 in terms of the ${\rm D3}$-brane tension out of convenience, 
 and note that there is no physical relationship between the two.}.
@@ -795,14 +795,14 @@ implies that the latter is the stronger of the two when
 % 
 \begin{equation}
 \label{eq:LHstronger}
-h_*^{4/3}N < 20 \left( \Vol g_s \right)^{1/3}  
-\left( \frac{m_s}{\Mpl} \right)^{-4/3} 
+h_*^{4/3}N < 20 \left( \Vol \gs \right)^{1/3}  
+\left( \frac{\ms}{\Mpl} \right)^{-4/3} 
 \frac{( \Delta \N )_*^2}{\Neff^2} \,.
 \end{equation}
 % 
-For typical field-theoretic values $\Vol \simeq \mathcal{O}(\pi^3)$, $m_s \simeq
+For typical field-theoretic values $\Vol \simeq \mathcal{O}(\pi^3)$, $\ms \simeq
 0.1 \Mpl$ 
-and  $g_s \simeq 10^{-2}$, this implies that
+and  $\gs \simeq 10^{-2}$, this implies that
 %  
 \begin{equation}
 \label{eq:LHstronger1}
@@ -846,24 +846,24 @@ next chapter.
 % %   
 % \begin{equation}
 % h = \frac{\rho}{L} , \qquad 
-% L^4 = \frac{4\pi^4 g_s N}{\Vol m_s^4}\,,
+% L^4 = \frac{4\pi^4 \gs N}{\Vol \ms^4}\,,
 % \end{equation}
 % %  
 % where $L$ denotes the $AdS_5$ radius of curvature, 
 % $\Vol$ is the volume of the five-manifold $X_5$ with unit radius, 
 % $N$ is the ${\rm D3}$-brane charge in the throat, 
-% $g_s$ is the string coupling and $m_s$ is the string mass scale. 
+% $\gs$ is the string coupling and $\ms$ is the string mass scale. 
 % Generally the value of the inflaton field 
 % is determined by the radial position of the 
 % ${\rm D3}$-brane in the throat, 
 % $\varphi \equiv \rho \sqrt{T_3}$, where $T_3 \equiv  
-% m_s^4/[(2\pi)^3g_s]$ is the brane tension. 
+% \ms^4/[(2\pi)^3\gs]$ is the brane tension. 
 
 
 % The four-dimensional Planck mass is related to the volume 
 % of the compactified Calabi-Yau three-fold, $V_6$, such that
 % $\Mpl^2 =V_6 \kappa_{10}^{-2}$, where $\kappa_{10}^2 \equiv \frac{1}{2}
-% (2 \pi )^7 g_s^2/ m_s^{8} = \pi /T_3^{2}$ for a 
+% (2 \pi )^7 \gs^2/ \ms^{8} = \pi /T_3^{2}$ for a 
 % ${\rm D3}$-brane \footnote{We parameterise the Planck scale 
 % in terms of the ${\rm D3}$-brane tension out of convenience, 
 % and note that there is no physical relationship between the two.}. 
