Changed to using x^i instead of x on Pg 90.

--- a/numerical/perts.tex
+++ b/numerical/perts.tex
@@ -399,11 +399,11 @@ These are not reproduced here, but are presented for example in Section~II~B of
 % 
 In general, the dynamics of the scalar field becomes clearer in Fourier space.
 However, terms at second order of the form
-$\left(\dvp1(x)\right)^2$ require the use
+$\left(\dvp1(x^i)\right)^2$ require the use
 of the convolution theorem (see for example \Rref{Vretblad:2005}).
 Following Refs.~\cite{book:liddle} and \cite{Malik:2006ir} we will write
 $\dvp{}(k^i)$
-for the Fourier component of $\dvp{}(x)$ such that
+for the Fourier component of $\dvp{}(x^i)$ such that
 % 
 \begin{equation}
  \dvp{}(\eta, x^i) = \frac{1}{(2 \pi)^3} \int \d^3k \dvp{}(\kvi) \exp (i k_i
@@ -431,12 +431,12 @@ particular, we
 require convolutions of the form
 %
 \begin{equation}
- f(x)g(x) \longrightarrow \frac{1}{(2 \pi)^3} \int \d^3q \d^3p\, \delta^3(\kvi
+ f(x^i)g(x^i) \longrightarrow \frac{1}{(2 \pi)^3} \int \d^3q \d^3p\, \delta^3(\kvi
 -\pvi -\qvi) f(\pvi)
 g(q^i) \,.
 \end{equation}
 %
-For convenience we will group together those terms with gradients of $\dvp1(x)$
+For convenience we will group together those terms with gradients of $\dvp1(x^i)$
 and denote them by $F$. 
 The full closed form, second order Klein-Gordon
 equation in Fourier Space is then given by \cite{Malik:2006ir}
