Changed to using \mathcal{R}_\mathrm{G} instead of \mathcal{R}_G on Pg 34.

--- a/mainintro.tex
+++ b/mainintro.tex
@@ -1250,12 +1250,12 @@ known as the local non-Gaussianity $\fnlloc$:
 % 
 \begin{equation} 
 \label{eq:fnllocdefn-intro}
-{\cal{R}} = {\cal{R}}_G + \frac{3}{5} \fnlloc  (
-{\cal{R}}_G^2 -\langle {\cal{R}}_G^2 \rangle )\,.
+{\cal{R}} = {\cal{R}}_\mathrm{G} + \frac{3}{5} \fnlloc  (
+{\cal{R}}_\mathrm{G}^2 -\langle {\cal{R}}_\mathrm{G}^2 \rangle )\,.
 \end{equation}
 Here the 
 quadratic component represents a convolution and 
-$\R_G$ denotes the Gaussian contribution
+$\R_\mathrm{G}$ denotes the Gaussian contribution
 \cite{Maldacena:2002vr}\footnotemark.
 \footnotetext{We use the WMAP sign convention for $\fnl$ throughout. 
 This is the opposite of the Maldacena convention:
