Changed 'Fourier Space' to 'Fourier space' on Pg 91.

--- a/numerical/perts.tex
+++ b/numerical/perts.tex
@@ -439,7 +439,7 @@ g(q^i) \,.
 For convenience we will group together those terms with gradients of $\dvp1(x^i)$
 and denote them by $F$. 
 The full closed form, second order Klein-Gordon
-equation in Fourier Space is then given by \cite{Malik:2006ir}
+equation in Fourier space is then given by \cite{Malik:2006ir}
 %  
 \begin{align}
 \label{eq:SOKG-real-num}
