Needed to add extra ../ to bibstyle filename.

--- a/thesis.tex
+++ b/thesis.tex
@@ -120,7 +120,7 @@ theend
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Bibliography
 \bibliography{thesis}
-\bibliographystyle{../packages/utphys-ih}
+\bibliographystyle{../../packages/utphys-ih}
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 
 % % % % % % % % % % % % % % % % % % % % % % % % % 
