Changed 'theoretical' to 'analytical' on P 11

--- a/shortintro.tex
+++ b/shortintro.tex
@@ -82,7 +82,7 @@ perturbations from a Gaussian random distribution could also reveal significant
 information about the underlying physics at work.
 
 
-In Part~\ref{part:dbi} of this thesis, theoretical bounds are placed on a class of
+In Part~\ref{part:dbi} of this thesis, analytical bounds are placed on a class of
 non-canonical inflationary models. These models illustrate the dynamics of
 extended objects called branes in superstring theory and are considered to be some of
 the most promising candidates for achieving inflation using string theory.
