Added note about using Misner conventionand changed affected equation 2.9 on Pg 17.

--- a/mainintro.tex
+++ b/mainintro.tex
@@ -164,10 +164,11 @@ Ricci tensor can be found:
 \label{eq:Ricci00-intro}
  R_{00} &= -3 \frac{\ddot{a}}{a} \,,\\
 \label{eq:Ricciij-intro}
- R_{ij} &= \delta_{ij} \left[ 2\dot{a}^2 +
-  a \ddot{a} + 2\frac{K}{a^2} \right] \,.
+ R_{ij} &= \gamma_{ij} \left[ 2\dot{a}^2 +
+  a \ddot{a} + 2K \right] \,,
 \end{align}
 % 
+where $\gamma_{ij}$ is the time independent spatial part of the metric in \eq{eq:frwmetric-intro}.
 The Friedmann equations are then determined from the Einstein equations
 \eqref{eq:einstein-intro}.
 The $00$ equation gives
