--- a/shortintro.tex
+++ b/shortintro.tex
@@ -242,4 +242,7 @@ number of e-foldings $\N$.
 A subscripted comma denotes partial differentiation by the symbol it
 precedes, \eg $f_{,\varphi} = \dfrac{\partial f}{\partial \varphi}$.
 
+The (+++) convention in the notation of Misner \etal \cite{book:kip} is
+used throughout. 
+
 
