Changed C_ij to C_1ij in Eq 2.33 on Pg 24.

--- a/mainintro.tex
+++ b/mainintro.tex
@@ -617,7 +617,7 @@ the metric can be written with perturbations, up to first order, as follows:
  \label{eq:pertmetric-intro}
  g_{00} &= -a^2 (1 + 2\phi_1) \,, \nonumber\\
  g_{0i} &= a^2 B_{1i} \,, \nonumber\\
- g_{ij} &= a^2\left(\delta_{ij} + 2C_{ij} \right) \,.
+ g_{ij} &= a^2\left(\delta_{ij} + 2C_{1ij} \right) \,.
 \end{align}
 % 
 The $0$-$i$ and $i$-$j$ perturbations can be decomposed into scalar, vector and
