Changed \gamma_1' to \gamma_1^i' and \gamma_1 to \gamma_1^i in Eqs 2.42, 2.43 on Pg 26.

--- a/mainintro.tex
+++ b/mainintro.tex
@@ -693,10 +693,10 @@ transformations for the scalars are
 and for the vectors
 \begin{align}
  \label{transS1}
-\widetilde {S_{1}^{~i}} &= S_{1}^{~i}-\gamma_1'\,, \\
+\widetilde {S_{1}^{~i}} &= S_{1}^{~i}-{\gamma_1^i}'\,, \\
 %
 \label{transF1}
-\widetilde {F_{1}^{~i}} &= F_{1}^{~i}+\gamma_1\,. 
+\widetilde {F_{1}^{~i}} &= F_{1}^{~i}+\gamma_1^i\,. 
 \end{align}
 % 
 The tensor perturbation $h_{1ij}$ does not change under transformation at first
