Changed E to -E in Eq 2.44 on Pg 26.

--- a/mainintro.tex
+++ b/mainintro.tex
@@ -706,7 +706,7 @@ are not perturbed by scalar or vector perturbations, so $\wt{\psi_1} = \wt{E_1}
 =0$ and $\wt{F_{1i}} = \textbf{0}$.  This is equivalent to the transformation
 % 
 \begin{equation}
- \alpha_1 = \frac{\psi_1}{\H}\,,\quad \beta_1=E_1 \,, \quad \gamma^i_1 =
+ \alpha_1 = \frac{\psi_1}{\H}\,,\quad \beta_1=-E_1 \,, \quad \gamma^i_1 =
 -F^i_1\,.
 \end{equation}
 
