Added a^\dagger commutator on LHS of Eq 2.53 on Pg 27.

--- a/mainintro.tex
+++ b/mainintro.tex
@@ -799,7 +799,7 @@ In Minkowski space these operators have the usual commutation relations
 \end{equation}
 and
 \begin{equation}
-[\hat{a}(\kb), \hat{a}(\kb')] = 0\,.
+[\hat{a}^\dagger(\kb), \hat{a}^\dagger(\kb')] = [\hat{a}(\kb), \hat{a}(\kb')] = 0\,.
 \end{equation}
 % 
 The $w$ modes are normalised by the condition \cite{Mukhanov:2005sc}
