Moved factor of i to other side of Eq 2.54 on Pg 27.

--- a/mainintro.tex
+++ b/mainintro.tex
@@ -806,7 +806,7 @@ The $w$ modes are normalised by the condition \cite{Mukhanov:2005sc}
 % 
 \begin{equation}
 \label{eq:quantcondition-intro}
- i(w^\star(\kvi)w'(\kvi) - {w^{\star}}'(\kvi)w(\kvi)) = 1\,.
+ w^\star(\kvi)w'(\kvi) - {w^{\star}}'(\kvi)w(\kvi) = i\,.
 \end{equation}
 
 
