Added reference to Baumann TASI lectures on Ph 28.

--- a/mainintro.tex
+++ b/mainintro.tex
@@ -840,7 +840,7 @@ which has the plane wave solution
 This is the initial condition for modes which are well inside the horizon.
 
 Now consider the de Sitter limit in which $\varepsilon_H\rightarrow 0$ and $H$
-is constant. We have $z''/z = a''/a = 2/\eta^2$ so the mode equation is
+is constant. We have $z''/z = a''/a = 2/\eta^2$ so the mode equation is \cite{Baumann2009}
 % 
 \begin{equation}
   w''(\kvi) + \left[ k^2 -\frac{2}{\eta^2} \right]w(\kvi) = 0\,.
