Changed from nabla to partial in eq just after Section 2.5 heading on Pg 32.

--- a/mainintro.tex
+++ b/mainintro.tex
@@ -1100,7 +1100,7 @@ at the 95\% confidence level.
 
 In the previous section we considered the dynamics of a scalar field with a
 canonical action $P(\vp, X) = X - V(\vp)$, where $X \equiv -\frac{1}{2}g^{\mu
-\nu}\nabla_\mu \varphi \nabla_\nu \varphi$ is the kinetic energy. 
+\nu}\partial_\mu \varphi \partial_\nu \varphi$ is the kinetic energy. 
 In this
 section we will generalise
 that analysis to include non-canonical actions. Non-canonical scalar
