Added reference to Mukhanov Physical Foundations on Pg 33.

--- a/mainintro.tex
+++ b/mainintro.tex
@@ -1155,7 +1155,7 @@ The generation of quantum perturbations in the non-canonical case is similar to
 the canonical one, but now includes contributions from $\cs$. Letting
 $u=a\dvp1$, the Mukhanov equation for the
 Fourier modes, \eq{eq:ueq-intro}, becomes
-\cite{gm}:
+\cite{gm, Mukhanov:2005sc}:
 % 
 \begin{equation}
  u''(\kvi) + \left[\cs^2 k^2 - \frac{z''}{z}\right] u(\kvi) = 0\,,
