Changed to using \fnleq on Pg 35.

--- a/mainintro.tex
+++ b/mainintro.tex
@@ -1311,11 +1311,11 @@ parameter is given by \cite{chenetal,lidser3}
 % 
 \begin{equation} 
 \label{eq:fnldefn-dbiintro}
- \fnl = -\frac{35}{108}\left(\frac{1}{\cs^2} -1 \right) +
+ \fnleq = -\frac{35}{108}\left(\frac{1}{\cs^2} -1 \right) +
 \frac{5}{81}\left( \frac{1}{\cs^2} -1 -2\Lambda \right) \,.
 \end{equation}
 %  
-Data from WMAP3 imposed the bound $|\fnl| < 300$ on this parameter
+Data from WMAP3 imposed the bound $|\fnleq| < 300$ on this parameter
 \cite{spergel}. The more recent WMAP5 data set
 improves on this bound somewhat \cite{Komatsu:2008hk}, and
 also indicates that it is distinctly asymmetric. At the $95 \%$ confidence
